Added name to HTML Head

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="Raymond J Mercola">
     <title>Accessible Responsive Styling Practice</title>
     <link href="styles.css" rel="stylesheet">
 </head>
